[package]
name = "natural_constants"
version = "0.1.0"
authors = ["Willi Kappler, grandor@gmx.de"]
license = "MIT"
description = "Pre-defined constants from all disciplines (math, physics, ...)"
readme = "README.md"
repository = "https://github.com/willi-kappler/natural_constants"
keywords = ["constants", "physics", "math", "science"]
documentation = ""

[dependencies]
# clippy = "*"
